Thu Mar  9 15:17:47 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Use Stats objects to pass statistics needed for the match around,
	  instead of directly asking the database.

	* Change parameters for BM25Weight: attach less importance to
	  document length.

	* Now copes with empty sub-databases rather better.

	* Calculate max_possible_weight (and thus percentages) correctly
	  when using BM25Weight.  (Had forgotten additive parameter.)

	* More debugging messages available.

Thu Mar  9 11:20:55 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed inline from omenquireinternal methods.

Wed Mar  8 18:24:27 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmBatchEnquire for batch queries.

Tue Mar  7 18:09:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added configure option to use error-checking mutexes instead
	  of the (portable) default.

Tue Mar  7 12:20:08 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Sleepycat backend now compiles, although undoubtably isn't
	  going to work properly.

Tue Mar  7 12:17:47 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmRangeError and OmDatabaseError exceptions.

Mon Mar  6 18:05:17 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* stemtest.pl now handles the child getting a Ctrl-C nicely.

Fri Mar  3 15:25:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added to one of the tests in apitest a check that the weights
	  returned by a query are as expected.  This will fail if weighting
	  schemes are changed, deliberately or accidentally.

Fri Mar  3 11:25:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmQuery now does a better job of collapsing sub-queries
	  with the same operator.  Yet another test now passes.

Thu Mar  2 17:47:29 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved omenquire and omstem into new directory api
